9/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
	* Adapted patch by Christian Lupien <lupien @at@ physique.usherbrooke.ca> to add processing of the different bank account types in OfxPaymentRequest.  Took this oportunity to correct an API duplication problem before it get's even more complicated to fix:  deleted OfxAccountInfo (OfxAccountData should be used instead) and the global scopt AccountType enum (use the one in OfxAccountData).
	Both of these changes will require source code change in aqbanking.
	* Bump the version ans soname right now so aqbanking can detect it.

8/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
	* Release 0.8.3

27/9/2006 Martin Preuss <martin@aquamaniac.de>
	* lib/ofx_preproc.cpp: Make sure all results of string::find are 
          inside the string's length; make sure to erase parts of the string 
          only if the string is long enough. 
          Fixes crash http://bugzilla.gnome.org/show_bug.cgi?id=353986
          Patch supplied by Christian Stimming from GnuCash

25/8/2006:  Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix datatype mismatch in ofx_preproc.cpp
	* Fix gengetopt related build problems on debian based distribution.
	* Remove massage about dependency on Qt, qhich is no longuer true
	* Fix ofxconnect headers not being distributed
	* Remove cmdline.c and cmdline.h which shouldn't be versionned
	* Release 0.8.2

3/8/2006 David Resier <dbreiser@earthlink.net>
	* Added fields used in stock splits (newunits, oldunits)
	Patch applied by Ace Jones <acejones@users.sf.net>

28/7/2006 Ace Jones <acejones@users.sf.net>
	* Fixed a compilation bug on GCC 4.1

20/7/2006:  Benoit Grégoire  <bock@step.polymtl.ca>
	* Revert last change to ofxdump, as it requires a system-dependent header (plus it didn't compile on my system)
	* Make both curl and libxml++ optional for compilation.
	* Add some debug output.
	* Update tree.hh

15/7/2006 Ace Jones <acejones@users.sf.net>