@@ -1,3 +1,6 @@
+24/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
+	* ofx_preproc.cpp:  Now parses the OFX headers to determine the input charset and encoding, and uses libiconv (if available) to convert the encoding since OpenSP can't do it.  The default output is now UTF-8.  This will "do the right thing" for Gnucash 2 and any client that uses UTF-8 strings, but we sould add an interface to let the client chose his prefered output encoding.
+
 9/1/2007:  Benoit Grégoire  <bock@step.polymtl.ca>
 	* Adapted patch by Christian Lupien <lupien @at@ physique.usherbrooke.ca> to add processing of the different bank account types in OfxPaymentRequest.  Took this oportunity to correct an API duplication problem before it get's even more complicated to fix:  deleted OfxAccountInfo (OfxAccountData should be used instead) and the global scopt AccountType enum (use the one in OfxAccountData).
 	Both of these changes will require source code change in aqbanking.
